# scientific-reviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: mcp_client.py
src/scientific_reviewer/: __init__.py  __main__.py  cache.py  citation.py  cli.py  gene.py  math.py  orchestrator.py  reviewer_mcp.py
tests/: test_cache.py  test_citation.py  test_gene.py  test_math.py
