[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-reviewer"
version = "0.1.0"
description = "AI-powered scientific reviewer — citation verification, gene validation, math checking, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Thiago Y. Oliveira", email = "tyoliveira@usp.br"},
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "sympy>=1.12",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mcp = ["fastmcp>=0.4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4.0", "pyright>=1.1.360", "httpx>=0.27.0"]
all = ["scientific-reviewer[mcp,dev]"]

[project.urls]
Repository = "https://github.com/stratust/scientific-reviewer"
Issues = "https://github.com/stratust/scientific-reviewer/issues"

[project.scripts]
scientific-reviewer = "scientific_reviewer.cli:main"

[project.entry-points."mcp.server"]
scientific-reviewer = "scientific_reviewer.reviewer_mcp:create_server"

[tool.setuptools.packages.find]
where = ["src"]
